--- a/src/sass/_visualizer.scss
+++ b/src/sass/_visualizer.scss
@@ -22,12 +22,29 @@
         }
     }
 
-    &__list {
+    &__list,
+    &__indexes {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: flex-end;
         justify-content: center;
+    }
+
+    &__list {
+        height: 90%;
+    }
+
+    &__indexes {
+        height: 10%;
+
+        li {
+            flex: 1;
+            width: 100%;
+            max-width: 4rem;
+            margin: 0 0.25rem;
+            text-align: center;
+        }
     }
 
     &__item {
@@ -56,6 +73,11 @@
             }
             &--right {
                 transform: translateX(-150%);
+            }
+        }
+        &.sorted {
+            .visualizer__item-container {
+                background-color: green;
             }
         }
 
