--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -33,8 +33,46 @@ img {
 	max-width: 100%;
 }
 
+.main-section {
+    padding: 2rem;
+    background-color: white;
+    border-radius: .5rem;
+    box-shadow: 0 0 .5rem rgba(0,0,0, .15);
+    &:not(:last-child) {
+        margin-bottom: 2rem;
+    }
+}
+
 .main {
     margin-top: 2rem;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        @include mq(768px) {
+            flex-direction: row;
+        }
+    }
+
+
+    &__left {
+        display: none;
+
+        @include mq(768px) {
+            display: block;
+            width: 20%;
+            margin-right: 2rem;
+        }
+    }
+    &__right {
+
+        @include mq(768px) {
+            width: 80%;
+        }
+    }
+
     &__section {
         padding: 2rem;
         padding-top: 3rem;
@@ -47,7 +85,6 @@ img {
             position: absolute;
             left: 2rem;
             top: -1rem;
-            
 
             h2 {
                 font-size: 1.4rem;
@@ -56,11 +93,6 @@ img {
         }
     }
 
-    .container {
-        background-color: white;
-        border-radius: .5rem;
-        box-shadow: 0 0 .5rem rgba(0,0,0, .15);
-    }
 }
 
 .form {
@@ -94,6 +126,40 @@ img {
             border-color: $text-color;
         }
     }
+
+    &--topics {
+        .form__group {
+            display: flex;
+            align-items: center;
+        }
+
+        label {
+            margin-left: 1rem;
+            padding-top: .25rem;
+        }
+    }
+
+    &--mobile-topic {
+        display: flex;
+        align-items: center;
+
+        small {
+            font-size: 1.5rem;
+            margin-right: .5rem;
+            text-transform: capitalize;
+        }
+        select {
+            width: 100%;
+            padding: .75rem;
+            max-width: 100%;
+            text-transform: capitalize;
+            font-size: 1.6rem;
+
+            option {
+                font-size: 1.4rem;
+            }
+        }
+    }
 }
 
 
@@ -120,7 +186,7 @@ img {
 
 .container {
     width: 95%;
-    max-width: 900px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
     overflow: hidden;
