--- a/src/sass/_visualizer.scss
+++ b/src/sass/_visualizer.scss
@@ -58,6 +58,18 @@
         justify-content: flex-end;
         transition: transform 300ms ease-in-out;
 
+        &.selected {
+            .visualizer__item-container {
+                background-color: $opague-main-color;
+            }
+        }
+        &.orange-bg {
+            .visualizer__item-container {
+                background-color: orange;
+            }
+        }
+
+
         &.comparing {
             .visualizer__item-container {
                 background-color: $opague-main-color;
@@ -77,7 +89,7 @@
         }
         &.sorted {
             .visualizer__item-container {
-                background-color: green;
+                background-color: #9ef01a;
             }
         }
 
