--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -33,6 +33,101 @@ img {
 	max-width: 100%;
 }
 
+label {
+    display: block;
+    font-size: 1.4rem;
+    text-transform: capitalize;
+    font-weight: 600;
+    margin-bottom: .25rem;
+}
+
+select {
+    width: 100%;
+    max-width: 7rem;
+    border: $border;
+    border-radius: .25rem;
+    padding: .25rem;
+    font-size: 1.2rem;
+    transition: border-color $t-time linear;
+    -webkit-appearence: none;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        border-color: $text-color;
+    }
+}
+
+input[type="range"] {
+  width: 100%;
+  -webkit-appearance: none;
+
+  &:focus {
+    outline: none;
+  }
+
+  // Chrome & Safari
+
+  &::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 1rem;
+    border-radius: 0.5rem;
+    background-color: $main-color;
+    cursor: pointer;
+  }
+
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: white;
+    width: 2.4rem;
+    height: 2.4rem;
+    border: 1px solid $main-color;
+    border-radius: 50%;
+    margin-top: -0.7rem;
+    cursor: pointer;
+  }
+
+  // Firefox
+  &::-moz-range-track {
+    width: 100%;
+    height: 1rem;
+    border-radius: 0.5rem;
+    background-color: $main-color;
+    cursor: pointer;
+  }
+
+  &::-moz-range-thumb {
+    -webkit-appearance: none;
+    background-color: white;
+    width: 2.4rem;
+    height: 2.4rem;
+    border: 1px solid $main-color;
+    border-radius: 50%;
+    margin-top: -0.7rem;
+    cursor: pointer;
+  }
+
+  // IE
+  &::-ms-track {
+    width: 100%;
+    height: 1rem;
+    border-radius: 0.5rem;
+    background-color: $main-color;
+    cursor: pointer;
+  }
+
+  &::-ms-thumb {
+    -webkit-appearance: none;
+    background-color: white;
+    width: 2.4rem;
+    height: 2.4rem;
+    border: 1px solid $main-color;
+    border-radius: 50%;
+    margin-top: -0.7rem;
+    cursor: pointer;
+  }
+}
+
 .main-section {
     padding: 2rem;
     background-color: white;
@@ -102,31 +197,6 @@ img {
     &__group {
         width: 100%;
         margin-bottom: 1.5rem;
-    }
-
-    label {
-        display: block;
-        font-size: 1.4rem;
-        text-transform: capitalize;
-        font-weight: 600;
-        margin-bottom: .25rem;
-    }
-
-    select {
-        width: 100%;
-        max-width: 7rem;
-        border: $border;
-        border-radius: .25rem;
-        padding: .25rem;
-        font-size: 1.2rem;
-        transition: border-color $t-time linear;
-        -webkit-appearence: none;
-
-        &:hover,
-        &:focus {
-            outline: none;
-            border-color: $text-color;
-        }
     }
 
     &--topics {
