--- a/src/sass/_visualizer.scss
+++ b/src/sass/_visualizer.scss
@@ -117,19 +117,35 @@
     }
 
     &__controls {
-        display: flex;
-        max-width: 40rem;
-        margin: 0 auto;
+        .buttons {
+            display: flex;
+            justify-content: center;
+            max-width: 40rem;
+            margin: 0 auto 2rem auto;
+        }
 
         .btn {
             flex: 1;
-            margin: 0 .25rem;
+            max-width: 8rem;
+            margin: 0 1rem;
         }
 
-        div {
-            flex: 3;
-            margin: 0 .5rem;
-            text-align: center;
+        // div {
+        //     flex: 3;
+        //     margin: 0 .5rem;
+        //     text-align: center;
+        // }
+        label {
+            margin-bottom: 1rem;
         }
+        .form__group {
+            max-width: 30rem;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    &__count {
+        text-align: center;
     }
 }
